# Jornada_financas_pessoais

./: .gitignore  README.md  extracao_cotacoes_historicas_b3.py  novo_arquivo.txt  pyproject.toml  requirements.txt
consultas_sql/: Jornada_financas_pessoais.mwb.bak  modelo_dados.sql
data/: COTAHIST.xlsx  COTAHIST_A2024.TXT  Controle de Ações e FII - Patricia.csv  Controle de Ações e FII - Taynara.csv  Controle de Ações e FII - Yasmin - FII.csv
documentacao/: DM_Extracao_dos_dados_B3.docx  naming-convention-guide.md
especificacao/: DM_Extracao_dos_dados_B3.docx
etl/: API_B3.py  Carga_cotacoes_historicas_b3.py  Extracao_cotahist_b3.py  Extracao_cotahist_pyspark.ipynb  Extracao_cotahist_pyspark.py  conexao.py  conexao_banco_de_dados.py  extracao_cotacoes_historicas_b3.py
modelo_dados/: Jornada_financas_pessoais.mwb  Jornada_financas_pessoais.mwb.bak  jornada_financas_pessoais.sql
pipeline/: Extracao_cotahist_pyspark.py  carga_gold_dim_ativo.ipynb  carga_gold_dim_ativo_financeiro.ipynb  carga_gold_dim_cliente.ipynb  carga_gold_dim_tempo.ipynb  carga_gold_fato_carteira.ipynb  carga_gold_fato_cotacao.ipynb  carga_silver_cotacoes_historicas.ipynb  carga_silver_cotacoes_historicas.py  carga_silver_cotacoes_historicas_pyspark.py  carga_silver_cotahist_spark.ipynb  carga_silver_delta_cotacao_historica.ipynb  carga_silver_stg_controle_ativo.ipynb  carga_silver_stg_cotacao_historica.ipynb  conexao.py  conexao_banco_de_dados.py  conexao_bancodedados.py  create_tables_delta_lake.ipynb  create_tables_gold_star_schema.ipynb  ingestao_bronze_controle_ativo.ipynb  (+14 more)
(+29 files in other folders)
