[tool.poetry]
name = "jornada-financas-pessoais"
version = "0.1.0"
description = ""
authors = ["fuyemura <fuyemura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.2"
ipykernel = "^6.29.5"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
